welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:4: error: illegal start of simple expression
  while (!positionFinale())) 
                           ^